Fri Nov  6 23:13:53 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* array.c: clarifies Array#reject! documentation.
	  [fix GH-894][ci skip] Patch by @GxSplinter

Fri Nov  6 20:18:25 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/runner.rb: extracted test helper.
	* test/lib/zombie_hunter.rb: ditto.

Fri Nov  6 18:07:47 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/ruby.h (rb_array_const_ptr, rb_struct_const_ptr):
	  Suppress pointer type mismatch warnings occurred with old version
	  of Fujitsu C Compiler (fcc) on Solaris 10. The warnings cause
	  failure of TestMkmf::TestConvertible. [Bug #11644] [ruby-dev:49326]
	* include/ruby/ruby.h (FIX_CONST_VALUE_PTR): macro for the above,
	  only effective with fcc.

Fri Nov  6 12:39:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def (token_ops), parse.y (parser_yylex): change DOTQ
	  from ".?" to "&.".  [ruby-core:71363] [Feature #11537]

Fri Nov  6 09:01:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (kwd_append): fix segv after invalid keyword argument,
	  preceding keyword list is NULL when syntax error is there.
	  [ruby-core:71356] [Bug #11663]

Fri Nov  6 06:59:37 2015  Eric Wong  <e@80x24.org>

	* test/ruby/test_autoload: hoist out ruby_impl_require

Thu Nov  5 13:03:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def (token_ops): gather associations between IDs,
	  operators, and parser tokens.

Thu Nov  5 10:17:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (make_addrinfo): use RARRAY_ASET for
	  write-barrier.

	* ext/tk/tcltklib.c ({call,eval,invoke}_queue_handler): ditto.

	* ext/tk/tkutil/tkutil.c (ary2list, ary2list2): ditto.

Thu Nov  5 10:09:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/**/*.c: prefer RARRAY_AREF to indexing RARRAY_CONST_PTR.
	  pointed out by hanmac.
	  https://github.com/ruby/ruby/commit/3553a86#commitcomment-14187670

Wed Nov  4 17:33:24 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
